Milestone 5 - zmienione rozdziały 1-5. Poprawione formatowanie. Jeszcze nie poprawione pozycjonowanie tych dwoch schematow od Łukasza.

--- a/thesis/01Wprowadzenie.tex
+++ b/thesis/01Wprowadzenie.tex
@@ -7,33 +7,54 @@
 \subsection{Problem}
 \label{Chapter111}
 
-Podstawą każdej działalności jest warunkująca ją potrzeba. Niemożliwą jest jednak analiza potrzeb, bez wcześniejszego ich zbadania. Najłatwiejszą i najbardziej rozpowszechnioną metodą pozyskiwania wiedzy na jakiś temat jest pytanie o to osób związanych ze sprawą. Kiedy pytań jest wiele, a liczba potencjalnych respondentów osiąga poziom kilkudziesięciu tysięcy osób, zadawanie pytań wymaga usystematyzowania. Podobnie wygląda kwestia metodyki ich dostarczania do odpowiadających oraz gromadzenia odpowiedzi. Rozwiązaniem tego zagadnienia jest równie proste, co skuteczne narzędzie badań, pozwalające na gromadzenie danych - ankieta. \\
+Ankieta pozwala na nieinwazyjne, anonimowe i~masowe pozyskiwanie opinii respondentów na zadany temat, a~dzięki zastosowaniu różnych metod statystycznych, także na ocenę zdania całej populacji. W kontekście każdej jednostki, zrzeszającej większą grupę osób, jak zakład pracy, czy jednostka szkolnictwa wyższego, jaką jest Politechnika Poznańska, ankietowanie jest niezwykle potrzebne, celem zapewnienia prawidłowej pracy. Bez~informacji zwrotnej (ang.~\definicja{feedback}) praktycznie nie ma możliwości precyzyjnej analizy poprawności podejmowanych działań, co~w~konkretnych sytuacjach może sprzyjać pojawieniu się niespodziewanej fali problemów. Za~przykład może posłużyć sytuacja, gdy nie posiadając wiedzy o nieodpowiednim (zdaniem studentów i prowadzących zajęcia) wyposażeniu sali laboratoryjnej, władze uczelni ustalają harmonogram zajęć, zwiększający obciążenie tego pomieszczenia, co~byłoby w tej sytuacji niewskazane. \\
 
-Ankieta pozwala na nieinwazyjne, anonimowe i masowe pozyskiwanie opinii respondentów na zadany temat, a dzięki zastosowaniu różnych metod statystycznych, także na ocenę zdania całej populacji. W kontekście każdej jednostki, zrzeszającej większą grupę osób, jak zakład pracy, czy jednostka szkolnictwa wyższego, jaką jest Politechnika Poznańska, ankietowanie jest niezwykle potrzebne, celem zapewnienia prawidłowej pracy. Bez informacji zwrotnej (ang.~\definicja{feedback}) praktycznie nie ma możliwości precyzyjnej analizy poprawności podejmowanych działań, co w efekcie zawsze będzie prowadzić do spiętrzającej się fali problemów. Za przykład może posłużyć sytuacja, gdy nie posiadając wiedzy o nieodpowiednim (zdaniem studentów i prowadzących zajęcia) wyposażeniu sali laboratoryjnej, władze uczelni ustalają harmonogram zajęć, zwiększający obciążenie tego pomieszczenia. Efektem takiego działania byłby spadek jakości kształcenia studentów korzystających z tego laboratorium. \\
+W ostatnich latach\footnote{Mowa o~okresie 2008-2013, który jest znany autorom niniejszej Pracy Dyplomowej.} Politechnika Poznańska posiadała szerokie spektrum narzędzi do pozyskiwania wiedzy o~swoim działaniu i~oferowanych usługach, funkcjonujących w zgodzie ze Statutem Politechniki Poznańskiej\footnote{Zapis dotyczący dokonywania oceny nauczyciela akademickiego z~uwzględnieniem oceny studentów\cite{AP:SPP11}.}. Niestety, gros~z~nich wzajemnie się wykluczał. Przykładowy student na Wydziale Informatyki\footnote{Do 2010 roku -- Wydziale Informatyki i~Zarządzania} poddawany był ankietom: elektronicznym na~poziomie Uczelni oraz Wydziału, ,,papierowym'' na~poziomie Uczelni oraz~Samorządu Studentów, a~ponadto, dodatkowej ankietyzacji w~ramach niektórych zajęć dydaktycznych. \\
 
-W ostatnich latach\footnote{Mowa o okresie 2008-2013, który jest znany autorom niniejszej Pracy Dyplomowej.} Politechnika Poznańska posiadała szerokie spektrum narzędzi do pozyskiwania wiedzy o swoim działaniu i oferowanych usługach, funkcjonujących w zgodzie ze Statutem Politechniki Poznańskiej\footnote{Zapis odnośnie dokonywania oceny nauczyciela akademickiego z uwzględnieniem oceny studentów\cite{AP:SPP11}.}. Niestety, gros z nich wzajemnie się wykluczał. Przykładowy student na Wydziale Informatyki\footnote{Do 2010 roku -- Wydziale Informatyki i Zarządzania} poddawany był ankietom: elektronicznym na poziomie Uczelni, jak i Wydziału, ,,papierowym'' na poziomie Uczelni oraz Samorządu Studentów, a ponadto dodatkowej ankietyzacji w ramach niektórych zajęć dydaktycznych. \\
+Żaden spośród tych ,,systemów'' ankietyzacji nie posiadał odpowiednich zabezpieczeń, wymaganych do~zapewnienia wymierności ich wyników (jak np.~zagwarantowanie, aby~nikt nie wziął w~ankiecie udziału więcej niż jeden raz, czy~uniemożliwienie wypełnienia ankiety przeznaczonej dla~innego wydziału, kierunku). Brak wymiernych efektów udziału w tych badaniach, podobnie jak~ich mnogość i dezorientacja związana z~pytaniem ,,kto tak naprawdę pozyskuje informacje'', działały tu na~niekorzyść ankietujących. \\
 
-Żaden spośród tych ,,systemów'' ankietyzacji nie posiadał odpowiednich zabezpieczeń, wymaganych do zapewnienia wymierności ich wyników (jak np.~zagwarantowanie, aby nikt nie wziął w ankiecie udziału więcej niż jeden raz, czy uniemożliwienie wypełnienia ankiety przeznaczonej dla innego wydziału, kierunku). Brak wymiernych efektów udziału w tych badaniach, podobnie jak ich mnogość i dezorientacja zwiżana z pytaniem ,,kto tak naprawdę pozyskuje informacje'', działały tu na niekorzyść ankietujących. Ważnym jest też fakt, że istniała tylko jedna, globalna grupa docelowa -- studenci Politechniki Poznańskiej. \\
-
-Ustawa o Szkolnictwie Wyższym wymaga od uczelni wyższych badania nie tylko aktualnej społeczności studenckiej, lecz także jej absolwentów\cite{AP:PoSW05}. Sprawdzane powinny być takie czynniki, jak rozwój karier czy satysfakcja z zapewnianych usług. Niestety, na Politechnice Poznańskiej brak jest odpowiednich narzędzi do prowadzenia tego rodzaju analiz. Nawiązując więc do wcześniejszych twierdzeń, potencjalna katastrofa (jak niezauważony spadek jakości usług, prowadzący do zmniejszenia satysfakcji odbiorców ze względu na brak podjęcia odpowiednich działań i w efekcie spadku prestiżu Uczelni) to jedynie kwestia czasu. \\
+\textit{Ustawa o~Szkolnictwie Wyższym} wymaga od~uczelni wyższych badania nie tylko aktualnej społeczności studenckiej, lecz~także jej absolwentów\cite{AP:PoSW05}. Sprawdzane powinny być takie czynniki, jak rozwój karier czy satysfakcja z zapewnianych usług. Niestety, na~Politechnice Poznańskiej brakuje odpowiednich narzędzi do prowadzenia tego rodzaju analiz, w~szczególności, że~dotychczasową grupą docelową wszelkich badań i ankiet byli jedynie aktualni studenci. Nawiązując więc do~wcześniejszych twierdzeń, w~konsekwencji niespełnienia wymagań określonych w Ustawie i~braku odpowiednich mechanizmów prowadzenia badań, mogłoby zaistnieć prawdopodobieństwo wystąpienia spadku jakości usług świadczonych przez uczelnię, a~co za tym idzie, także jej prestiżu.
 
 \subsection{Proponowane rozwiązanie}
 \label{Chapter112}
 
-Najłatwiejszym i -- w opinii autorów niniejszego dokumentu -- najlepiej popartym logicznymi argumentami rozwiązaniem, jest stworzenie jednego, jednolitego, globalnego i prostego w obsłudze systemu prowadzenia badań i ankiet dla różnych grup docelowych, obejmujących wszystkich aktualnych i byłych studentów Politechniki Poznańskiej. Aby zapewnić dostępność oraz prostotę wdrożenia systemu, który na to pozwoli, zostanie on wykonany za pomocą technologii internetowych, co umożliwi też jego obsługę z użyciem dowolnej popularnej przeglądarki internetowej dostępnej na rynku. \\
+Najłatwiejszym, a~zarazem -- w~opinii autorów niniejszego dokumentu -- najlepiej popartym logicznymi argumentami rozwiązaniem, jest stworzenie jednego, jednolitego, globalnego i prostego w obsłudze systemu prowadzenia badań i~ankiet dla różnych grup docelowych, obejmujących wszystkich aktualnych i~byłych studentów Politechniki Poznańskiej. Aby zapewnić dostępność oraz prostotę wdrożenia systemu, który~na to pozwoli, zostanie on wykonany za pomocą technologii internetowych, co umożliwi też jego obsługę z użyciem dowolnej popularnej przeglądarki internetowej dostępnej na~rynku. \\
 
-W trakcie analizy problemu ustalono, że koniecznym będzie także zapewnienie swojego rodzaju ,,zachęty'' dla potencjalnych respondentów -- o ile bowiem studentowi może zależeć na rozwoju jego uczelni, o tyle absolwent nie będzie czerpał z tego tytułu żadnych wymiernych korzyści. Wybrane dla systemu iQuest rozwiązanie obejmuje więc też element zachęcający do korzystania z systemu, jakim jest udzielanie im dostępu do unikalnych materiałów dydaktyczno-naukowych. \\
+W~trakcie analizy problemu ustalono, że koniecznym będzie także zapewnienie swojego rodzaju ,,zachęty'' dla potencjalnych respondentów -- o~ile bowiem studentowi może zależeć na rozwoju jego uczelni, o~tyle absolwent nie~będzie czerpał z~tego tytułu żadnych wymiernych korzyści. Wybrane dla~systemu iQuest rozwiązanie obejmuje więc też element zachęcający do korzystania z systemu, jakim jest udzielanie użytkownikom spoza uczelni dostępu do~unikalnych materiałów dydaktyczno-naukowych. \\
 
-Aby zapewnić, że pozyskane w badaniach dane są prawidłowe, w proponowanym rozwiązaniu znajdą się systemy autoryzacji osób ankietowanych. Jest to jednak jedyny element wymagający sprawdzenia tożsamości respondenta -- same wyniki będą dla ankietera całkowicie anonimowe. \\
+Aby~zapewnić, że~pozyskane w~badaniach dane są~prawidłowe, w~proponowanym rozwiązaniu znajdą się systemy autoryzacji osób ankietowanych. Jest~to jednak jedyny element wymagający sprawdzenia tożsamości respondenta -- same wyniki będą dla~ankietera całkowicie anonimowe. \\
 
 \section{Ograniczenia i zagrożenia dla projektu}
 \label{Chapter12}
 
-Największym ograniczeniem, a zarazem zagrożeniem dla całego projektu jest kwestia zachęty studentów i absolwentów do korzystania z nowego systemu ankietowania. Popularność całego systemu zależy w głównej mierze właśnie od tego, jakie materiały będą za jego pośrednictwem udostępniane oraz jakie będą warunki uzyskania dostępu do nich. \\
+W zależności od punktu widzenia, z jakiego projekt iQuest podda się analizie, wskazać można różne zestawy ograniczeń i zagrożeń dla jego realizacji. Dla przykładu, rozpatrując tę kwestię ze strony klienta, ważna może być kwestia zachęty studentów i absolwentów Uczelni do korzystania z systemu. Dla zespołu programistów, którzy są jednocześnie autorami niniejszej pracy dyplomowej, będzie to sprawa poboczna, niezwiązana z realizacją wymagań funkcjonalnych\footnote{Rozdział \ref{Chapter3}. - Wymagania funkcjonalne.}. Zdecydowano więc o analizie jedynie ograniczeń i zagrożeń związanych ze stroną implementacyjną projektu, przy uwzględnieniu następujących definicji:
+\begin{description}
+\item[Ograniczenie] -- granica, której przekroczenie jest niemożliwe lub zakazane. Obejmuje np. ograniczenia technologiczne oraz narzucone z góry przez osoby o kompetencjach decyzyjnych w kwestiach związanych z projektem.
+\item[Zagrożenie] -- sytuacja lub fakt mogący negatywnie wpłynąć na realizację projektu.
+\end{description}
 
-Rozpatrując jednak tę kwestię ze strony implementacyjnej, sporym zagrożeniem okazuje się wymaganie stosowania rozwiązań ,,otwartych'' i ,,wolnych'', ograniczające spektrum możliwych do wykorzystania technologii i zasobów. W tej kategorii, za poważne ograniczenie należałoby także uznać wyznaczony z góry termin zakończenia prac. Na projektowanie, implementację i wdrożenie rozwiązania przewidziany jest jedynie okres od września 2012, do lutego 2013. Uzupełniając tę kwestię o fakt braku wcześniejszego doświadczenia zespołu przy realizacji projektów opartych na technologiach internetowych, spełnienie wszystkich wymagań związanych z projektem może okazać się utrudnione. \\
+\subsection{Ograniczenia}
+\label{Chapter121}
 
-Ostatecznie jednak, kwestia zachęty dla respondentów -- choć istotna dla powodzenia systemu w przyszłości -- w fazie tworzenia może być potraktowana jako poboczna. Kwestię ograniczonego czasu można natomiast nadrobić, stosując odpowiednie metody zarządzania czasem. Największym zagrożeniem pozostaje więc brak wcześniejszego doświadczenia w tego typu projektach oraz ograniczenia dotyczące możliwych do zastosowania technologii. \\
+System iQuest realizowany jest na zlecenie Dziekana Wydziału Informatyki. Z tego względu, musi on podlegać szerokiemu spektrum wymagań ze strony takich organów, jak DRO (\definicja{Dział Rozwoju Oprogramowania}). Jednym z nich jest konieczność stosowania rozwiązań ,,otwartych'' (ang. \definicja{open}) oraz ,,wolnych'' (ang. \definicja{free}). Znacząco zawęża to możliwe do zastosowania technologie i zasoby. \\
+
+Za poboczne ograniczenie można uznać z góry narzucony harmonogram prac. Zespół programistów realizował tego rodzaju projekt po raz pierwszy, stąd nie było dla niego łatwym zweryfikowanie możliwości jego wykonania.
+
+\subsection{Zagrożenia}
+\label{Chapter122}
+
+Zagrożeniem dla projektu mógł być brak wcześniejszego doświadczenia zespołu przy realizacji tego rodzaju projektów. W początkowych fazach projektu sądzono więc, że nieznajomość technologii może przyczynić się do powstania ciężkich do przekroczenia barier. Jak się jednak okazało, powyższe zagrożenie okazało się mało istotne, gdyż zespół dynamicznie przystosowywał się do sytuacji, brak doświadczenia nadrabiając umiejętnością szybkiej nauki. \\
+
+W nawiązaniu do powyższego zagrożenia, na drodze programistów stała jednak jedna poważna przeszkoda -- niekompletność dokumentacji dotyczącej niektórych systemów i technologii zastosowanych w projekcie. \\
+
+Najpoważniejszym problemem okazały się jednak niespodziewane zmiany w specyfikacji projektu oraz w wymaganiach klienta w trakcie tworzenia systemu..
+
+\subsection{Wpływ ograniczeń i zagrożeń na projekt}
+\label{Chapter123}
+
+Decyzja o zastosowaniu konkretnych typów technologii zdecydowała o bardzo wielu aspektach projektu, poczynając od tego, czy realizowany będzie on od podstaw, czy na podstawie innego systemu. Było to dość istotne i miało swoje odzwierciedlenie na liście zagrożeń -- o ile bowiem rozwiązania komercyjne są nierzadko doskonale udokumentowane przez ich twórców, o tyle te darmowe często opisuje tzw. ,,społeczność'', co wpływa na kompletność i jakość dostępnych treści. Wiążąc to z brakiem wcześniejszego doświadczenia, nawet pomimo umiejętności szybkiego uczenia się nowości, sprawiało to niemałe problemy -- trudno nauczyć się czegoś, czego nigdzie nie opisano w sposób umożliwiający łatwą naukę. Często wymuszało to realizację zadań na zasadzie ,,prób i błędów'', co wpływało na ich czas realizacji. \\
+
+Wspomniany w poprzedniej sekcji (\ref{Chapter122}. - Zagrożenia) problem zmieniających się wymagań i specyfikacji sprawił jednak najwięcej problemów. Gdy bowiem rozwiązywane były kłopoty dotyczące nieprzystępności niektórych technologii, nierzadko trzeba było wracać do podstaw, by właśnie utworzoną funkcjonalność zmodyfikować, zapewniając zgodność z nowymi wytycznymi. Było to główną przyczyną powstawania opóźnień w realizacji projektu.
 
 \section{Cele projektu}
 \label{Chapter13}
@@ -52,11 +73,29 @@ Celem projektu \textit{iQuest} jest zbudowanie systemu umożliwiającego łatwe 
 \item{odciążyć pracowników uczelni oraz Samorząd Studentów z obowiązków związanych z przeprowadzaniem konwencjonalnych (,,papierowych'') ankiet}
 \end{itemize}
 
-\section{Omówienie pracy}
+\section{Osoby realizujące projekt}
 \label{Chapter14}
 
-Niniejszy dokument, będący pracą inżynierską w ramach studiów I-stopnia na kierunku Informatyka na Wydziale Informatyki Politechniki Poznańskiej, dotyczy systemu iQuest, służącego do badania opinii studentów i absolwentów Uczelni, realizującego zadania przytoczone w rozdziale \ref{Chapter13}.Praca ma formę dokumentacji technicznej dla osób mających w przyszłości rozwijać, wdrażać i obsługiwać system, choć jej odbiorcami są również członkowie komisji egzaminacyjnej. \\
+Projekt realizowany jest w ramach SDS (ang. \definicja{Software Development Studio}), służącego realizacji projektów informatycznych dla Wydziału Informatyki Politechniki Poznańskiej, gdzie w rolę zespołu zarządzającego wcielają się studenci studiów magisterskich (specjalizacja \definicja{Software Engineering}), zaś zespół programistów tworzą studenci ostatniego semestru studiów inżynierskich. Dla tych ostatnich, udział w SDS jest ściśle związany z pracą dyplomową inżynierską. \\
 
-Cała praca podzielona została umownie (w trakcie tworzenia) na trzy uzupełniające się części, zawierające po kilka rozdziałów. Część pierwsza, zawierająca rozdziały \ref{Chapter1}., \ref{Chapter8}. i \ref{Chapter9}. oraz sekcję \ref{Chapter62}. rozdziału \ref{Chapter6}., odnosi się do całości projektu z punktu widzenia jego autorów. W tej części opisane są założenia, napotkane problemy i wyciągnięte z pracy wnioski. Część druga, zawierająca rozdziały od \ref{Chapter2}. do \ref{Chapter5}., dotyczy charakterystyki projektu oraz jego architektury. Tę część oparto na danych pozyskanych od zespołu zarządzającego projektem\cite{Redmine:ProjDocs}, dostępnych dla zespołu w ramach platformy \definicja{Redmine}. Część trzecia, zawierająca pozostałe rozdziały, tj. \ref{Chapter6}. i \ref{Chapter7}, przedstawia projekt od strony implementacji. Zawiera szczegółowe informacje odnośnie budowy systemu iQuest. \\
+Szczegóły odnośnie osób realizujących projekt znajdują się w dodatku \ref{Chapter10}. Poniżej przedstawiono wykaz kompetencji poszczególnych zespołów:
+\begin{description}
+\item[Zespół zarządzający] -- obejmuje dwóch studentów, pełniących role \emph{kierownika projektu} oraz \emph{architekta}. Kompetencje:
+\begin{itemize}
+\item Kontakt bezpośredni z klientem oraz jego przedstawicielami
+\item Decydowanie o kierunku rozwoju projektu (w tym: wybór technologii, rozwiązań, itp.)
+\item Utworzenie dokumentacji architektury projektu
+\item Tworzenie i przydzielanie zadań do zespołu programistów
+\end{itemize}
+\item[Zespół programistów] -- obejmuje czterech studentów, pełniących role \emph{programistów}. Kompetencje:
+\begin{itemize}
+\item Przyjmowanie i realizacja zadań przydzielonych zespołowi
+\item Zgłaszanie problemów z implementacją założeń architektonicznych
+\item Opiniowanie decyzji w procesie ich podejmowania
+\end{itemize}
+\end{description}
 
-Wraz z dalszym zagłębianiem się w treść, następuje przejście na coraz głębszy poziom abstrakcji. Zabieg ten miał na celu zagwarantowanie osobie czytającej stopniowe zagłębianie się w szczegóły projektu. Jednocześnie, czytający ma pewność, że otwierając konkretny rozdział niniejszego dokumentu, uzyska dostęp do najistotniejszych dla niego informacji.
+\section{Struktura pracy}
+\label{Chapter15}
+
+Cała praca podzielona została umownie (w trakcie tworzenia) na trzy uzupełniające się części, zawierające po kilka rozdziałów. Część pierwsza, zawierająca rozdziały \ref{Chapter1}., \ref{Chapter8}. i \ref{Chapter9}. oraz sekcję \ref{Chapter62}. rozdziału \ref{Chapter6}., odnosi się do całości projektu z punktu widzenia osób go realizujących. Opisane są w niej założenia, napotkane problemy i wyciągnięte z pracy wnioski. Część druga, zawierająca rozdziały od \ref{Chapter2}. do \ref{Chapter5}., dotyczy charakterystyki projektu oraz jego architektury. Oparto ją na danych pozyskanych od zespołu zarządzającego projektem\cite{Redmine:ProjDocs}, dostępnych dla zespołu w ramach platformy \definicja{Redmine}. Część trzecia, zawierająca pozostałe rozdziały, tj. \ref{Chapter6}. i \ref{Chapter7}, przedstawia projekt od strony implementacji. Zawiera szczegółowe informacje odnośnie budowy systemu iQuest.
