--- a/thesis/06Implementacja.tex
+++ b/thesis/06Implementacja.tex
@@ -1,6 +1,10 @@
 \chapter{Opis implementacji}
 \label{Chapter6}
 
+%WRZUCIĆ TO GDZIEŚ W TEN DZIAŁ?
+%Instalacja systemu realizowana jest trójstopniowo. Pierwszym krokiem jest umieszczenie na serwerze docelowym plików platformy Moodle i ich instalacja oraz wstępna konfiguracja. W tak przygotowanym środowisku, umieszczane są następnie pliki systemu iQuest, które -- dzięki wbudowanym mechanizmom platformy Moodle -- administrator może w bardzo prosty sposób zainstalować i aktywować. Aktualizacja systemu przebiega bardzo podobnie, i polega jedynie na przeprowadzeniu standardowego dla Moodle procesu aktualizacji, poprzedzonego zmianą odpowiednich plików na serwerze, w ramach którego działa system.
+%WRZUCIĆ TO GDZIEŚ W TEN DZIAŁ?
+
 \section{Wstęp}
 \label{Chapter61}
 
