nie ma gwiazdek przy mnozeniu rozmiarow w tex. Praca sie nie kompilowala

--- a/thesis/03Funkcjonalne.tex
+++ b/thesis/03Funkcjonalne.tex
@@ -9,7 +9,7 @@ Celem sprawnej realizacji celów warunkujących powstanie systemu \textit{iQuest
 Na rysunku \ref{rys:UseCaseView} przedstawiono diagram przypadków użycia. W ramach systemu udostępniane są różne funkcje, możliwe do wykonania przez różnych aktorów. Dla przykładu, Ankieter może tworzyć Badania i analizować ich Statystyki oraz Raporty, podczas gdy Respondent może odpowiadać w Ankietach w ramach skierowanych do niego Badań; Administrator zarządza przydzielaniem ról; Administrator Bazy Danych zajmuje zarządza grupami Respondentów i przydzielaniem praw i zezwoleń.
 
 \begin{figure}[H]
-\centering\includegraphics[width=0.9*\textwidth]{figures/UseCaseView}
+\centering\includegraphics[width=0.9\textwidth]{figures/UseCaseView}
 \caption{Diagram przypadków użycia}\label{rys:UseCaseView}
 \end{figure}
 
