--- a/thesis/05Architektura.tex
+++ b/thesis/05Architektura.tex
@@ -10,7 +10,7 @@ System \textit{iQuest} został stworzony w oparciu o model architektury trójwar
 \label{Chapter52}
 
 \begin{figure}[H]
-\centering\includegraphics[width=0.9*\textwidth]{figures/marketecture}
+\centering\includegraphics[width=0.9\textwidth]{figures/marketecture}
 \caption{Diagram ,,Marketektury''}\label{rys:marketecture}
 \end{figure}
 
@@ -72,7 +72,7 @@ Schemat \ref{rys:PerspektywaFizyczna} prezentuje perspektywę fizyczną projektu
 \label{Chapter542}
 
 \begin{figure}[H]
-\centering\includegraphics[width=0.9*\textwidth]{figures/LogicalView}
+\centering\includegraphics[width=0.9\textwidth]{figures/LogicalView}
 \caption{Diagram perspektywy logicznej}\label{rys:PerspektywaLogiczna}
 \end{figure}
 
@@ -111,7 +111,7 @@ Dzięki temu komponentowi możliwe jest szeregowanie oraz wykonywanie zadań w t
 \label{Chapter543}
 
 \begin{figure}[H]
-\centering\includegraphics[width=0.9*\textwidth]{figures/Layers}
+\centering\includegraphics[width=0.9\textwidth]{figures/Layers}
 \caption{Diagram perspektywy implementacyjnej}\label{rys:PerspektywaImplementacyjna}
 \end{figure}
 
@@ -121,7 +121,7 @@ Diagram perspektywy implementacyjnej (rys.~\ref{rys:PerspektywaImplementacyjna})
 \label{Chapter544}
 
 \begin{figure}[H]
-\centering\includegraphics[width=0.9*\textwidth]{figures/ProcessView}
+\centering\includegraphics[width=0.9\textwidth]{figures/ProcessView}
 \caption{Diagram perspektywy procesu}\label{rys:PerspektywaProcesu}
 \end{figure}
 
